fixing things and adding in json-rpc compiling

--- a/libs/3rdParty/json-rpc/make/vs2010/json-rpc/json-rpc.vcxproj
+++ b/libs/3rdParty/json-rpc/make/vs2010/json-rpc/json-rpc.vcxproj
@@ -53,6 +53,7 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>..\..\..\..\json-cpp\include;..\..\..\..\boost\;..\..\..\..\</AdditionalIncludeDirectories>
+      <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
