--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,9 @@
 # Auto detect text files and perform LF normalization
-* text=auto
+* text eol=crlf
+
+*.png binary
+*.jpg binary
+*.dll binary
 
 # Custom for Visual Studio
 *.cs     diff=csharp
